--- a/Lab2/Task 1/.github/workflow/deployment.yml
+++ b/Lab2/Task 1/.github/workflow/deployment.yml
@@ -1,40 +1,58 @@
-name: Terraform Deployment
+name: Terraform CI/CD
 
 on:
   push:
     branches:
-      - main 
+      - main
+  pull_request:
+    branches:
+      - main
+
 jobs:
   terraform:
+    name: 'Terraform Deploy'
     runs-on: ubuntu-latest
 
+    env:
+      AWS_REGION: 'us-east-1'
+      TF_VERSION: '1.9.6'
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: 'Checkout GitHub repository'
+      uses: actions/checkout@v2
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_version: 1.9.6
-      
-      - name: Terraform fmt
-        id: fmt
-        run: terraform fmt
-        continue-on-error: true
+    - name: 'Configure AWS credentials'
+      uses: aws-actions/configure-aws-credentials@v2
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ env.AWS_REGION }}
 
-      - name: Run Checkov scan
-        uses: bridgecrewio/checkov-action@master
-        with:
-          directory: .
-        
-      - name: Terraform Init
-        run: terraform init
+    - name: 'Set up Terraform'
+      uses: hashicorp/setup-terraform@v1
+      with:
+        terraform_version: ${{ env.TF_VERSION }}
+    
+    - name: 'Install Checkov'
+      run: |
+        pip3 install checkov
+        checkov --version
+    
+    - name: "Test Terraform code"
+      run: checkov --file Lab1_Terraform.tf
 
-      - name: Terraform Plan
-        run: terraform plan
+    - name: 'Terraform Init'
+      run: terraform init
 
-      - name: Terraform Apply
-        run: terraform apply -auto-approve
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    - name: 'Terraform Format'
+      run: terraform fmt
+
+    - name: 'Terraform Validate'
+      run: terraform validate
+
+    - name: 'Terraform Plan'
+      run: terraform plan -out=tfplan
+
+    - name: 'Terraform Apply'
+      if: github.ref == 'refs/heads/main'
+      run: terraform apply -auto-approve tfplan
