--- a/Lab2/Task 2/.taskcat.yml
+++ b/Lab2/Task 2/.taskcat.yml
@@ -5,7 +5,7 @@ project:
 
 tests:
   testcfn:
-    template: ./Lab1_CloudFormation.yml
+    template: ./CloudFormation.yml
     parameters:
       EnvironmentName: TestEnvironment
       VpcCIDR: 10.0.0.0/16
