--- a/Lab2/Task 2/CloudFormation.yml
+++ b/Lab2/Task 2/CloudFormation.yml
@@ -5,15 +5,7 @@ Parameters:
   EnvironmentName:
     Description: An environment name that will be prefixed to resource names
     Type: String
-    AllowedPattern: '[A-Za-z0-9-]+'
-  GitHubOAuthTokenSecretName:
-    Type: String
-  GitHubRepositoryOwner:
-    Description: Enter GitHub username of the repository owner
-    Type: String
-  GitHubRepository:
-    Description: Enter the repository name that should be monitored for changes
-    Type: String
+    #AllowedPattern: '[A-Za-z0-9-]+'
   VpcCIDR: 
     Description: Please enter the IP range (CIDR notation) for this VPC
     Type: String
@@ -199,110 +191,3 @@ Resources:
       Tags: 
         - Key: Name
           Value: !Join ['', [!Ref "AWS::StackName", "-Pri-EC2"]]
-
-#####S3Bucket#####
-  ArtifactS3Bucket:
-    Type: AWS::S3::Bucket
-    Properties:
-      BucketName: !Join
-        - '-'
-        - - codebuild
-          - !Ref ApplicationName
-
-#####CodeBuild Role#####
-  CodeBuildRole:
-    Type: AWS::IAM::Role
-    Properties:
-      Path: /
-      RoleName: !Sub '${ApplicationName}-CodeBuild-Pipeline'
-      AssumeRolePolicyDocument:
-        Statement:
-          - Action: 'sts:AssumeRole'
-            Effect: Allow
-            Principal:
-              Service: codebuild.amazonaws.com
-#####CodeBuild IAM#####
-  CodeBuildIAMPolicy:
-    Type: 'AWS::IAM::Policy'
-    Properties:
-      PolicyName: !Sub '${ApplicationName}-CodeBuildPolicy-Pipeline'
-      PolicyDocument:
-        Version: 2012-10-17
-        Statement:
-          - Effect: Allow
-            Resource:
-              - '*'
-            Action:
-              - 'logs:CreateLogGroup'
-              - 'logs:CreateLogStream'
-              - 'logs:PutLogEvents'
-
-          - Effect: Allow
-            Resource:
-              - !Join
-                - ''
-                - - 'arn:aws:s3:::'
-                  - !Ref ArtifactS3Bucket
-                  - /*
-            Action:
-              - 's3:GetObject'
-              - 's3:GetObjectVersion'
-              - 's3:PutObject'
-          - Effect: Allow
-            Resource:
-              - !Sub >-
-                arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:github-token-*
-            Action:
-              - 'secretsmanager:GetSecretValue'
-          - Effect: Allow
-            Resource:
-              - '*'
-            Action:
-              - 'cloudformation:*'
-          - Effect: Allow
-            Resource:
-              - '*'
-            Action:
-              - 'iam:*'
-              - 'vpc:*'
-              - 'kms:*'
-              - 's3:*'
-              - 'codebuild:*'
-              - 'codepipeline:*'
-              - 'events:*'
-              - 'ec2:*'
-      Roles:
-        - !Ref CodeBuildRole
-#####CodeBuild Project#####
-  Codebuild:
-    Type: AWS::Codebuild::Project
-    Properties:
-      Name: !Sub '${ApplicationName}'
-      Description: !Sub 'Build project of ${ApplicationName} '
-      Source:
-        BuildSpec: 'build-config/build-spec.yml'
-        GitCloneDepth: 1
-        GitSubmodulesConfig:
-          FetchSubmodules: false
-        InsecureSsl: false
-        Location: !Sub https://github.com/${GitHubRepositoryOwner}/${GitHubRepository}
-        ReportBuildStatus: false
-        Type: 'GITHUB'
-      SourceVersion: !Sub refs/heads/master
-      Artifacts:
-        Type: 'NO_ARTIFACTS'
-      Cache:
-        Type: 'NO_CACHE'
-      ServiceRole: !Ref CodeBuildRole
-      Environment:
-        ComputeType: BUILD_GENERAL1_SMALL
-        PrivilegedMode: false
-        Image: 'aws/codebuild/standard:5.0'
-        Type: LINUX_CONTAINER
-        EnvironmentVariables:
-          - Name: STACK
-            Type: 'PLAINTEXT'
-            Value: none
-          - Name: STACKTYPE
-            Type: 'PLAINTEXT'
-            Value: pipeline
