--- a/Lab2/Task3/Jenkinsfile
+++ b/Lab2/Task3/Jenkinsfile
@@ -1,101 +1,117 @@
-def COLOR_MAP = [
-    'SUCCESS' : "good",
-    'FAILURE' : "danger",
-]
-
 pipeline {
     agent any
-    tools {
-        maven "MAVEN3"
-        jdk "OracleJDK17"
-    }
 
+    environment {
+        DOCKER_COMPOSE_FILE = 'docker-compose-local.yml'
+    }
     stages {
         stage("Fetch code") {
             steps {
-                git branch: 'docker', url: 'https://github.com/hkhcoder/vprofile-project.git'
+                git branch: 'main', url: 'https://github.com/navtuan12/microservice-docker.git'
             }
         }
-
-        stage("Build") {
-            steps {
-                sh 'mvn install -DskipTests'
-            }
-            post {
-                success {
-                    echo 'Archiving artifacts now.'
-                    archiveArtifacts artifacts: "**/*.war"
-                }
-            }
-        }
-
-        stage("Unit Test") {
-            steps {
-                sh 'mvn test'
-            }
-        }
-
-        stage("Checkstyle Analysis") {
-            steps {
-                sh 'mvn checkstyle:checkstyle'
-            }
-        }
-
-        stage("Sonar Analysis") {
-            environment {
-                scannerHome = tool 'sonar6.0'
-            }
-            steps {
-                withSonarQubeEnv('sonar') {
-                    sh '''${scannerHome}/bin/sonar-scanner -Dsonar.projectKey=vprofile \
-                    -Dsonar.projectName=vprofile \
-                    -Dsonar.projectVersion=1.0 \
-                    -Dsonar.sources=src/ \
-                    -Dsonar.java.binaries=target/test-classes/com/visualpathit/account/controllerTest/ \
-                    -Dsonar.junit.reportsPath=target/surefire-reports/ \
-                    -Dsonar.jacoco.reportsPath=target/jacoco.exec \
-                    -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml
-                    '''
-                }
-            }
-        }
-
-        // stage("Quality Gate") {
-        //     steps {
-        //         timeout(time: 1, unit: 'HOURS') {
-        //             waitForQualityGate abortPipeline: true
-        //         }
-        //     }
-        // }
-
-        // 
-
-        stage("Build Docker Image") {
+        stage('Build with Maven') {
             steps {
                 script {
-                    dockerImage = docker.build("172.26.195.46:8082/repository/vpro-docker-app/vprofile-app:${env.BUILD_ID}", "./Docker-files/app/multistage/")
-                }
-            }
-        }
-
-        stage('Upload App Image') {
-            steps{
-                script {
-                    withCredentials([usernamePassword(credentialsId: 'nexuslogin', passwordVariable: 'PSW', usernameVariable: 'USER')]){
-                        sh "echo ${PSW} | docker login -u ${USER} --password-stdin http://172.26.195.46:8082"
-                        sh "docker push 172.26.195.46:8082/repository/vpro-docker-app/vprofile-app:${env.BUILD_ID}"
+                    // Define service directories based on your structure
+                    def services = ['config-server', 'discovery-server', 'employee-service', 'organization-service']
+                    services.each { service ->
+                        dir("${service}") {
+                            sh './mvnw clean package -DskipTests' // Adjust if tests should not be skipped
+                        }
                     }
                 }
             }
         }
-    }
+        stage('Build Docker Images') {
+            steps {
+                script {
+                    // Build the Docker images for each service
+                    def services = ['config-server', 'discovery-server', 'employee-service', 'organization-service'] // Update with your service names
+                    services.each { service ->
+                        sh "docker build -t 172.26.195.46:8082/repository/nexus-docker-repo/${service}:${env.BUILD_ID} ./${service}" 
+                    }
+                }
+            }
+        }
+        stage("Sonar Analysis") {
+            environment {
+                scannerHome = tool 'sonar6.0'
+            }
 
-    post {
-        always {
-            echo 'Slack Notifications.'
-            slackSend channel: '#devops-cicd',
-                color: COLOR_MAP[currentBuild.currentResult],
-                message: "*${currentBuild.currentResult}:* Job ${env.JOB_NAME} build ${env.BUILD_NUMBER} \n More info at: ${env.BUILD_URL}"
+            steps {
+                withSonarQubeEnv('sonar') {
+                    script {
+                        // Define services to analyze
+                        def services = ['config-server', 'discovery-server', 'employee-service', 'organization-service']
+
+                        // Loop through each service for SonarQube analysis
+                        services.each { service ->
+                            echo "Running SonarQube analysis for ${service}"
+                            sh """
+                            ${scannerHome}/bin/sonar-scanner \
+                            -Dsonar.projectKey=${service} \
+                            -Dsonar.projectName=${service} \
+                            -Dsonar.projectVersion=1.0 \
+                            -Dsonar.sources=${service}/src/main/java \
+                            -Dsonar.java.binaries=${service}/target/classes \
+                            -Dsonar.java.coveragePlugin=jacoco \
+                            -Dsonar.junit.reportPaths=${service}/target/surefire-reports \
+                            -Dsonar.jacoco.reportPaths=${service}/target/jacoco.exec \
+                            -Dsonar.java.checkstyle.reportPaths=${service}/target/checkstyle-result.xml
+                            """
+                        }
+                    }
+                }
+            }
+        }
+
+        stage('Push Docker Images to Local Registry') {
+            steps{
+                script {
+                    withCredentials([usernamePassword(credentialsId: 'nexuslogin', passwordVariable: 'PSW', usernameVariable: 'USER')]){
+                        sh "echo ${PSW} | docker login -u ${USER} --password-stdin http://172.26.195.46:8082"
+                        def services = ['config-server', 'discovery-server', 'employee-service', 'organization-service'] // Update with your service names
+                        services.each { service ->
+                            sh "docker push 172.26.195.46:8082/repository/nexus-docker-repo/${service}:${env.BUILD_ID}"
+                        }
+                    }
+                }
+            }
+        }
+
+        stage('Deploy with Docker Compose') {
+            steps {
+                script {
+                     try {
+                        // Stop and remove any existing containers
+                        sh 'docker compose -f docker-compose-local.yml down'
+                    } catch (Exception e) {
+                        echo 'No existing containers to stop.'
+                    }
+
+                    try {
+                        // Pull the latest images (will fail gracefully if images do not exist yet)
+                        sh 'docker compose -f docker-compose-local.yml pull'
+                    } catch (Exception e) {
+                        echo 'No images found in the registry, proceeding with local builds.'
+                    }
+                    sh 'docker compose -f docker-compose-local.yml up -d --build --force-recreate --remove-orphans'
+                }
+            }
         }
     }
+
+    // post {
+    //     always {
+    //         // Clean up Docker images and containers after the pipeline finishes
+    //         sh 'docker rmi -'
+    //     }
+    //     success {
+    //         echo 'Deployment successful!'
+    //     }
+    //     failure {
+    //         echo 'Deployment failed!'
+    //     }
+    // }
 }
